[package]
name = "waymux-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Wire types and framing for the waymux control protocol."
repository = "https://gitlab.com/tek.cat/waymux"
homepage = "https://gitlab.com/tek.cat/waymux"
readme = "README.md"
keywords = ["wayland", "protocol", "msgpack", "rpc"]
categories = ["api-bindings", "network-programming"]

[dependencies]
serde = { workspace = true }
rmp-serde = { workspace = true }
rmpv = { workspace = true }
thiserror = { workspace = true }
serde_bytes = "0.11"

[dev-dependencies]
serde_json = "1"

[package.metadata.cargo-machete]
# serde_bytes is used via `#[serde(with = "serde_bytes")]` attributes, which
# cargo-machete cannot see in its static scan. Do not remove.
ignored = ["serde_bytes"]
